# lonejson

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  docker-compose.yml  lonejson.rockspec.in
bench/: lonejson_bench.c  lonejson_lua_bench.lua
cmake/: c_pkt_systems_metadata.cmake  check_bench_gate.cmake  check_fuzz_instrumentation.cmake  check_header_abi_version.cmake  check_single_header_release_version.cmake  check_single_header_version.cmake  check_soversion.cmake  fetch_c_pkt_systems.cmake  fetch_liblockdc.cmake  package_archive.cmake  package_checksums.cmake  package_clean_dist.cmake  package_darwin_smoke_bundle.cmake  package_single_header.cmake  package_source.cmake
cmake/toolchains/: arm64-apple-darwin.cmake  linux-aarch64-gnu.cmake  linux-aarch64-musl.cmake  linux-armhf-gnu.cmake  linux-armhf-musl.cmake  linux-x86_64-musl.cmake
docker/api-fixture/: app.py
docker/nginx/conf.d/: default.conf
docker/oauth2/: config.json
docker/oauth2-tls/: app.py
docker/sink/: app.py
docs/: auth-implementation.md  auth-roadmap.md
examples/: README.md  array_stream.c  curl_get.c  curl_put.c  fixed_storage.c  generator_pull.c  json_value_buffer.c  json_value_nested_parse.c  json_value_parse.c  json_value_source.c  json_value_visitor.c  lua_binding.lua  lua_json_value_nested.lua  lua_json_value_object_array.lua  lua_nullable.lua  nullable_fields.c  parse_file.c  parse_reader.c  parse_string.c  push_parser.c  serialize_file.c  serialize_jsonl.c  serialize_string.c  source_bytes.c  source_text.c  spooled_bytes.c  spooled_text.c  sse_json_value_stream.c  value_rewrite_replace_with.c
fuzz/: fuzz_alloc_ceiling.c  fuzz_array_stream.c  fuzz_base64.c  fuzz_candidate_stream.c  fuzz_fixed_string_paths.c  fuzz_json_value.c  fuzz_jwt.c  fuzz_mapped_parse.c  fuzz_parser_boundaries.c  fuzz_path_value_visitor.c  fuzz_protocol_framing.c  fuzz_reader_stream_generator.c  fuzz_validate.c  fuzz_value_rewrite.c  fuzz_value_visitor.c  fuzz_writer_generator_backpressure.c  fuzz_writer_value_stream.c
fuzz/corpus/alloc_ceiling/: seed-budget.txt  seed-reuse.txt
fuzz/corpus/array_stream/: escaped_duplicate_key  escaped_surrogate_key  escaped_unicode_key  invalid_key_escape  large_skipped_prefix  raw_duplicate_escaped_key  root_array  root_duplicate_nonselected_key
fuzz/corpus/base64/: raw.txt  url.txt
fuzz/corpus/candidate_stream/: array-items  malformed  repeated-values  single-object
fuzz/corpus/fixed_string_paths/: seed-basic.txt  seed-scratch.txt
fuzz/corpus/json_value/: large_selector_payload.json
fuzz/corpus/jwt/: alg-none-empty-signature.jwt  invalid-padding.jwt  jwk-x5c-invalid-der.txt  mixed-jwks.json  oidc-discovery.json  rsa-jwk.json  too-many-segments.jwt  valid-claims.jwt  valid-rs256-jwk.json  valid-rs256-like.jwt  valid-rs256-signature.jwt
include/: lonejson.h
lua/: README.md
lua/lonejson/: init.lua
perflogs/: README.md  baseline.json  latest.json
perflogs/lua/: README.md  baseline.json  latest.json
scripts/: bench_baseline_history.lua  build_curl_examples.sh  build_lua_rock.sh  check_clang_sanitizer_support.sh  check_curl_abi_symbols.sh  check_darwin_macho_metadata.sh  check_jwt_abi_symbols.sh  clean.sh  detect_c_pkt_systems_bundle.sh  detect_liblockdc_bundle.sh  discover_target_tools.sh  ensure_large_fixtures.sh  ensure_test_certs.sh  generate_fuzz_large_seeds.sh  generate_large_fixtures.lua  package_lua_src_rock.sh  release_version.sh  render_release_rockspec.sh  report_stack_usage.lua  run_linux_release_matrix.sh  run_release_matrix.sh  smoke_darwin_release.sh  smoke_lua_src_rock.sh  stage_lua_rock_sources.sh  stage_release_sources.sh  stage_standalone_examples.sh  test_curl_e2e.sh  test_m2m_e2e.sh  test_oidc_e2e.sh  test_release_from_source.sh  verify_release_archives.sh  verify_release_artifacts.sh
src/: lonejson.c  lonejson_impl.h  lonejson_internal.h
src/impl/: 00_prelude.h  09_base64.h  10_json_runtime.h  10_source_runtime.h  11_json_value_io.h  12_json_value_parse.h  13_json_value_visit.h  14_json_value_api.h  20_parser.h  20_parser_map.h  21_parser_values.h  22_parser_actions.h  22_parser_engine.h  23_serializer_io.h  24_serializer.h  25_json_pull.h  30_api.h  32_generator_api.h  33_array_stream_api.h  34_protocol_framing_api.h  35_json_pull_impl.h  36_curl_api.h  37_array_rewrite_api.h  38_writer_api.h  39_value_rewrite_api.h  40_auth_api.h
src/lua/: lonejson_lua.c  lonejson_lua_auth.inc.h  lonejson_lua_module.inc  lonejson_lua_module.inc.h  lonejson_lua_record.inc  lonejson_lua_record.inc.h  lonejson_lua_schema.inc  lonejson_lua_schema.inc.h  lonejson_lua_schema_methods.inc  lonejson_lua_stream_spool.inc  lonejson_lua_stream_spool.inc.h  lonejson_lua_support.inc  lonejson_lua_support.inc.h  lonejson_lua_visitor_facade.inc.h
tests/: m2m_fixture_server.c  oidc_fixture_server.c  test_allocator_visitor.inc  test_allocator_visitor.inc.h  test_array_rewrite.inc  test_array_rewrite.inc.h  test_array_stream.inc  test_array_stream.inc.h  test_base64.inc.h  test_bench_baseline_history.sh  test_bench_retry_confirm.sh  test_candidate_stream.inc.h  test_check_clang_sanitizer_support.sh  test_cmake_c_pkt_systems_root.sh  test_cmake_fuzz_auth_optional.sh  test_cmake_fuzz_sanitizer_conflicts.sh  test_cmake_threads_optional.sh  test_ctest_metadata.sh  test_curl_misc.inc  test_curl_misc.inc.h  test_darwin_linker_route.sh  test_darwin_macho_metadata.sh  test_discover_target_tools.sh  test_fetch_c_pkt_systems.sh  test_fixtures_public.inc  test_fixtures_public.inc.h  test_generator_omit.inc  test_json_value_sources.inc  test_json_value_sources.inc.h  test_jwt.inc.h  test_link_consumer.c  test_lua.lua  test_lua_embedded_runner.c  test_lua_encode_stats.lua  test_lua_encode_stats.sh  test_lua_external_liblonejson.sh  test_lua_fuzz.lua  test_lua_legacy_uservalue.sh  test_lua_native_test_target_filter.sh  test_lua_public_boundary.sh  (+30 more)
tests/fixtures/: README.md  lockdbench.jsonl  workloadbench.jsonl
tests/golden/: bench_record_compact.json  bench_record_compact.jsonl  bench_record_pretty.json  bench_record_pretty.jsonl
(+68 files in other folders)
